# 2026CV

./: README.md
Group04/code/: README.md  infer_rehab_folder.py  train_stgat_uiprmd.py
Group04/code/web-flask/: app.py  auth.py  config.py  models.py  requirements.txt
Group04/code/web-vue/: index.html  package.json  tsconfig.json  vite.config.ts
Group04/document/: 2026CV G04 1211002038 赵逸凡 大作业.docx  2026CV G04 1231002012 唐伟翔 大作业.docx  2026CV G04 1231002015 王浩懿 大作业.docx
Group05/code/: README.md  REPORT_2026_0518.md
Group05/code/ros2_ws/src/low_altitude_bringup/: package.xml  setup.cfg  setup.py
Group05/code/ros2_ws/src/low_altitude_bringup/launch/: dataset_collect.launch.py  perception_yolo.launch.py  sim_bridge.launch.py
Group05/code/ros2_ws/src/low_altitude_bringup/low_altitude_bringup/: dashboard.py  dataset_collector.py  gz_camera_bridge.py  hud.py  image_snapshot.py  image_throttle.py  image_utils.py  metrics.py  projection.py  results_recorder.py  yolo_detector.py
Group05/code/ros2_ws/src/low_altitude_bringup/resource/: low_altitude_bringup
Group05/document/: 2026CV_G05_1231002006_李彦博_大作业.docx  2026CV_G05_汇报总结.pptx
Group07/: README.md
Group07/code/: README.md  generate_sample_log.py  main.py  requirements.txt
Group07/document/: 2026CV_G07_1231001002_蔡卓霖_大作业.docx  2026CV_G07_1231001003_曹昂_大作业.docx  2026CV_G07_1231001032_张万山_大作业.docx  2026CV_G07_汇报总结.pptx
Group08/code/: README.txt  main.py
Group08/document/: 2026CV_G08_1231001004_曹殿卿_大作业.docx  2026CV_G08_1231001005_柴鑫佳_大作业.docx  2026CV_G08_1231001006_程霄扬_大作业.docx  2026CV_G08_汇报总结.pptx
(+76 files in other folders)
