<?xml version="1.0"?>
<package format="3">
  <name>low_altitude_bringup</name>
  <version>0.1.0</version>
  <description>ROS 2 bringup utilities for the 2026CV low-altitude PX4 and Gazebo project.</description>
  <maintainer email="student@example.com">2026CV Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>rosgraph_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-pil</exec_depend>

  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
